<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "HoloCanon">
    ]>


<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">&appname;</string>
    <string name="sync_online">Sync database now</string>
    <string name="media_title">Title</string>
    <string name="media_type">type</string>

    <string name="launcher_icon_description">HoloCanon Icon</string>



    <string name="cover_image_description">cover</string>
    <string name="setting_unmetered_sync_only">sync_wifi_only</string>
    <string name="release_date">release date</string>
    <string name="bundleItemId">item Id</string>


    <string name="description_header">Description: </string>
    <string name="series_title">series title</string>
    <string name="series_image_description">series image</string>
    <string name="view_series">View Series</string>

    <!--navigation-->
    <string name="nav_home">Home</string>
    <string name="nav_media_list">Canon List</string>
    <string name="nav_filters">Filters</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>

    <!--preference keys-->
    <string name="current_database_version">current database version</string>
    <string name="checkbox1_default_text">Completed</string>
    <string name="checkbox2_default_text">Wishlist</string>
    <string name="checkbox3_default_text">Owned</string>
    <string name="user_filter_3_active">user_filter_3_active</string>
    <string name="user_filter_2_active">user_filter_2_active</string>
    <string name="user_filter_1_active">user_filter_1_active</string>

    <!--quotes-->
    <string-array name="quotes" tools:ignore="UnusedResources">
        <item>Do or do not. There is no try.</item>
        <item>This is the way.</item>
        <item>I have spoken.</item>
        <item>Grakkus isn\'t like other Hutts.</item>
    </string-array>

    <!--home fragment-->
    <string name="welcome_message"><p>Welcome to &appname;, an unofficial canon tracker for the Star Wars universe.</p>

        \n\n<p>Come find me on Twitter <a href="https://twitter.com/holocanon">@HoloCanon</a> or on my <a href="https://discord.gg/RxXvTfX">Discord server</a>.
            These are great ways to make suggestions, alert me to any bugs or incorrect data, and to keep updated on the app in general.
            If you\'d prefer more personal or private contact, you can e-mail me at <a href="mailto:DarthMerman@gmail.com">DarthMerman@gmail.com</a>.</p>

        \n\n<p>The purpose of this app is to make it easier to keep track of all of the currently canonical content in the Star Wars universe.
        I usually filter out "completed" items and then choose a media type or a series I\'m interested in to see what is left for me to read (or watch).
        The list can be sorted by release date, title, media type, or in-universe timeline (which is a constant work-in-progress).
        I\'m always open to suggestions for more filtering/sorting methods.</p>

        \n\n<p>Images and database updates only download on unmetered (usually wifi) networks by default.
        This behavior can be changed in the settings, where you can also force a database sync.</p>

        \n\n<p>In settings you can also change the text associated to the checkboxes as well as permanently filter out certain media types (such as "youth").</p>

        \n\n<p>Below are notes for the latest update. To see previous update notes, tap the question mark in the top corner.</p></string>

    <!--about-->
    <string name="copyright_notice">This app is in no way affiliated with or endorsed by Disney or Lucasfilm.
        I do not claim to own Star Wars or any of its related copyrights or trademarks.
        The use of Star Wars content in this app is protected under Fair Use.</string>
    <string name="affiliate_notice">As an Amazon Associate I may earn money from qualifying purchases made through the links in this app.</string>


    <!--update messages-->
    <string name="update_1_2_1">Version 1.2.1: Changed how items are displayed in the canon list.
    Filter selection is now sorted alphabetically.
    Canon list sorting now defaults to release date.
    Fixed bug where user-defined filter names were not properly updating.
    Can now hide unused user-defined filters.
    The series view now includes a list of items in that series.</string>
    <string name="update_1_2_0">Version 1.2.0: Added filtering by series and a series page for relevant items, which can be accessed through any item in that series.
        This means you can now check off the entire Clone Wars series at once (hooray!).
        Changed the filter selection menu which should allow for better control over filters.
        Got rid of the reviews (I don\'t think anyone here wants my opinions :P).
        The app now comes with a prepackaged database (loaded on the first run of the app).</string>
    <string name="update_1_0_3">Version 1.0.3: Filters and sorting method should now persist when you return to the Canon List.
        I also changed some things under the hood, so if the app seems to be running slower or something isn\'t working as expected, then let me know (through my twitter/discord/e-mail, all listed above).</string>
    <string name="update_1_0_2">Version 1.0.2: Changed app name to better comply with Google Play\'s rules.
        Cleaned up the individual item layout so the descriptions and reviews (that I\'m working on adding) show up cleanly.</string>
    <string name="update_1_0_1">Version 1.0.1: Added links to purchase items from Amazon to the canonical items pages.
    Using these links to purchase things will help support this app. Also changed the color of the sort/filter buttons.</string>
    <string name="update_1_0_0">Version 1.0.0: First full release.</string>
    <string name="update_0_1_6" tools:keep="@string/update_0_1_6">Version 0.1.6: Now restricts downloading of data to unmetered networks only. This feature can
    be turned off in the settings.
        Updating is now also done silently in the background unless forced from the settings menu.
    Some small modifications were made to the layout of the list items. Namely I made the thumbnail a little bigger and stopped long titles from crashing into the checkboxes.
    0.1.6b: Fixed a crash that occurred when trying to view a media item that doesn\'t have a downloaded thumbnail. Also added this update text.</string>
    <string name="update_0_1_5" tools:keep="@string/update_0_1_5">Version 0.1.5: Some more stability fixes.
    There was a crash involving clicking on a media item and opening the page for that item that should be fixed.
    Images should load much smoother now.
        Plans for the coming updates: remembering filters, wifi-only downloading of database and images, updating database.
        Don\'t forget to leave feedback or e-mail me through the play store entry so I know what else can be done to improve the app.</string>
    <string name="update_0_1_4" tools:keep="@string/update_0_1_4">Version 0.1.4: This update should improve stability (i.e. the app shouldn\'t crash so much anymore).</string>
    <string name="update_0_1_0" tools:keep="@string/update_0_1_0">Version 0.1.0: Initial release! Hooraaaay!
        I\'m still working on fixing up release dates, images, and timeline in the database.
        It should automatically update when I do that.
        This app downloads the database and images, so try not to use it without wifi for now.
        Future versions will have an option to not download unless on wifi.</string>
    <string name="cover_art">Cover art</string>
    <string name="how_to_buy">how to buy</string>

</resources>
