<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:key="user_defined_notes"
        android:title="User-Defined Filters">
        <EditTextPreference
            android:defaultValue="@string/checkbox1_default_text"
            android:key="@string/checkbox1_default_text"
            android:summary="@string/checkbox1_default_text"
            android:title="User-Defined Filter 1" />
        <EditTextPreference
            android:defaultValue="@string/checkbox2_default_text"
            android:key="@string/checkbox2_default_text"
            android:title="User-Defined Filter 2" />
        <EditTextPreference
            android:defaultValue="@string/checkbox3_default_text"
            android:key="@string/checkbox3_default_text"
            android:title="User-Defined Filter 3" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="permanent_filters"
        android:title="Included Media Types" />


    <PreferenceCategory
        android:key="sync_settings"
        android:title="Database Sync Settings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_unmetered_sync_only"
            android:title="Sync only on unmetered network" />
        <Preference
            android:key="update_from_online"
            android:title="@string/sync_online" />
    </PreferenceCategory>

</PreferenceScreen>