<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EntryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/welcome_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/welcome_message"/>

        <TextView
            android:id="@+id/textview_update_0_1_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/welcome_textview"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/update_0_1_6"/>

        <TextView
            android:id="@+id/textview_update_0_1_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/textview_update_0_1_6"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/update_0_1_5"/>

        <TextView
            android:id="@+id/textview_update_0_1_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/textview_update_0_1_5"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/update_0_1_4"/>

        <TextView
            android:id="@+id/textview_update_0_1_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textview_update_0_1_4"
            android:padding="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/update_0_1_0"/>


        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_update_0_1_0"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_notice"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>