<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/copyright_notice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_notice"
            />


        <TextView
            android:id="@+id/textview_update_1_2_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/copyright_notice"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/update_1_2_0"/>
        <TextView
            android:id="@+id/textview_update_1_0_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/textview_update_1_2_0"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/update_1_0_3"/>
        <TextView
            android:id="@+id/textview_update_1_0_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/textview_update_1_0_3"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/update_1_0_2"/>
        <TextView
            android:id="@+id/textview_update_1_0_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/textview_update_1_0_2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/update_1_0_1"/>

        <TextView
            android:id="@+id/textview_update_1_0_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/textview_update_1_0_1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/update_1_0_0"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>